// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderBAM Rendering Render HeaderBAM component with default props 1`] = `
<React.Fragment>
  <div
    className="HeaderBAM__bam"
  >
    <span>
      BAM  
      <Link
        id="link-icon"
      />
       
      <a
        href="192.168.10.2"
        rel="noreferrer"
        target="_blank"
        title="Bam1"
      >
        Bam1
      </a>
    </span>
  </div>
</React.Fragment>
`;

exports[`HeaderBAM Rendering Render HeaderBAM component with props 1`] = `
<React.Fragment>
  <div
    className="HeaderBAM__bam varClassName"
  >
    <span>
      BAM  
      <Link
        id="link-icon"
      />
       
      <a
        href="192.168.10.2"
        rel="noreferrer"
        target="_blank"
        title="Bam1"
      >
        Bam1
      </a>
    </span>
  </div>
</React.Fragment>
`;
